Fix for heading overflow.

--- a/ENV/shucks/shucks/static/style.css
+++ b/ENV/shucks/shucks/static/style.css
@@ -37,6 +37,8 @@ body {
 	font-weight: normal;
     font-family: 'Vollkorn', serif;
 	font-size: 40px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .heading {
